Updating tests and doc